--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -8,7 +8,7 @@ Homepage: https://github.com/user/packet_tester
 
 Package: packet-tester
 Architecture: any
-Depends: ${python3:Depends}, ${misc:Depends}, python3-flask, python3-flask-socketio, python3-eventlet, iputils-ping, iputils-tracepath
+Depends: ${python3:Depends}, ${misc:Depends}, python3-flask, python3-flask-socketio, python3-eventlet, python3-requests, iputils-ping, iputils-tracepath
 Description: Real-time network diagnostic dashboard
  A real-time network diagnostic dashboard inspired by PingPlotter.
  It enables concurrent monitoring of multiple network destinations.
