--- a/packaging/nfpm.yaml
+++ b/packaging/nfpm.yaml
@@ -28,5 +28,6 @@ overrides:
       - python3-flask
       - python3-flask-socketio
       - python3-eventlet
+      - python3-requests
       - iputils-ping
       - iputils-tracepath
