--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
     tags: [ 'v*' ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
 
 jobs:
   test:
@@ -52,15 +53,32 @@ jobs:
   build-packages:
     needs: test
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/checkout@v3
       
-      - name: Build Debian Package
+      - name: Set version
+        run: |
+          if [[ $GITHUB_REF == refs/tags/v* ]]; then
+            echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+          else
+            echo "VERSION=0.0.1-snapshot-${GITHUB_SHA::7}" >> $GITHUB_ENV
+          fi
+
+      - name: Build Packages
         uses: goreleaser/nfpm-action@v2
         with:
           args: package --config packaging/nfpm.yaml --target .
-        continue-on-error: true # NFPM might need separate config
+        env:
+          VERSION: ${{ env.VERSION }}
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: packages
+          path: |
+            *.deb
+            *.pkg.tar.zst
 
       - name: Upload Release Artifacts
         if: startsWith(github.ref, 'refs/tags/v')
