--- a/packaging/nfpm.yaml
+++ b/packaging/nfpm.yaml
@@ -15,10 +15,12 @@ contents:
     dst: "/opt/packet-tester/app.py"
   - src: "database.py"
     dst: "/opt/packet-tester/database.py"
-  - src: "templates/"
-    dst: "/opt/packet-tester/templates/"
-  - src: "static/"
-    dst: "/opt/packet-tester/static/"
+  - src: "templates/index.html"
+    dst: "/opt/packet-tester/templates/index.html"
+  - src: "static/js/monitor.js"
+    dst: "/opt/packet-tester/static/js/monitor.js"
+  - src: "static/css/tailwind.min.css"
+    dst: "/opt/packet-tester/static/css/tailwind.min.css"
   - src: "packaging/packet-tester.service"
     dst: "/usr/lib/systemd/system/packet-tester.service"
 overrides:
